<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic strings -->

    <string name="poll_start_time">Start date</string>
    <string name="header_votes">Votes</string>
    <string name="header_percentage">%</string>
    <string name="header_option">Option</string>
    <string name="cast">Cast Vote</string>
    <string name="join">Join</string>
    <string name="cast_votes">Cast votes: %1$d of %2$d</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="options">Options</string>
    <string name="participants">Participants</string>
    <string name="network_name">Network name</string>
    <string name="network_info">Network information</string>
    <string name="network_password_desc">Network password</string>
    <string name="not_connected">No network set up</string>
    <string name="help">Help</string>
    <string name="networks">Network connection</string>
    <string name="empty_vote">Empty vote</string>
    <string name="dialog_wait_wifi">Please wait...</string>
    <string name="button_use_actual_ssid">Use currently connected wireless network</string>
    <string name="button_scan_nfc">Scan NFC tag</string>
    <string name="advance_network_config">Advanced network configuration</string>
    <string name="write_nfc_tag">Write NFC tag</string>
    <string name="scan_qrcode">Scan QR code</string>
    <string name="put_nfc">Put an NFC tag in proximity of your device...</string>
    
    <string name="number_voters">Eligible voters</string>
    <string name="number_cast_votes">Cast votes</string>
    <string name="participation">Participation</string>
    <!--
         <string name="display_result_close">Close</string>
        <string name="home">Home</string>
    -->


    <!-- Action bar titles -->

    <string name="delete_poll">Delete poll</string>
    <string name="redo_poll">Repeat poll</string>

    <!-- Toasts / Dialogs -->
    <string name="delete_poll_confirm_title">Delete the poll?</string>
    <string name="delete_poll_confirm_text">Do you really want to delete this poll? It won\'t be accessible anymore.</string>
    <string name="scroll">Please first have a look at all options</string>
    <string name="choose_one_option">Please choose one of the given options</string>
    <string name="join_error_admin">It seems that a group with the same name already exists! Please choose another name!</string>
    <string name="join_error_voter">No group with the given name exists. Please wait for the administrator to create the group.</string>
    <string name="redo_impossible">An error occurred while trying to restart the poll.</string>
    <string name="not_included_title">Your are not in the electorate</string>
    <string name="not_included">You were not included in the electorate. So, you cannot participate to the poll. You will be redirected to the main screen.</string>
    <string name="dialog_title_network_lost">Group connection lost!</string>
    <string name="dialog_network_lost">The network connection has been lost. The poll will be interrupted.</string>
    <string name="taost_password_letter">The password must start with a letter.</string>
    <string name="dialog_title_confirm_vote">Confirm your vote.</string>
    <string name="dialog_confirm_vote">You have selected the following option:\n\n%1$s\n\nDo you want to confirm your choice and send your vote?</string>

    <!-- Activity titles -->
    <string name="app_name">VotingLib</string>
    <string name="title_activity_wait_for_votes">Waiting...</string>
    <string name="title_activity_vote">Vote</string>
    <string name="title_activity_list_terminated_polls">Poll Archives</string>
    <string name="title_activity_display_result">Poll Results</string>
    <string name="title_activity_network_informations">Network Information</string>
    <string name="title_activity_create_network">Create a network</string>

    <!-- Activity subtitles -->
    <string name="list_polls_title">Poll archives</string>
    <string name="display_result_title">Poll results</string>
    <string name="vote_title">Please vote</string>
    <string name="wait_votes">Thanks for voting!\nWaiting for votes...</string>
    <string name="title_activity_network_ready">Network connection informations</string>
    <string name="title_activity_choosenetwork">Please Choose the Network you want to use</string>

    <!-- Hints in EditText fields -->
    <string name="hint_network_password">Network Password</string>
    <string name="hint_network_wlan_key">WLAN Key</string>

    <!-- Image descriptions -->
    <string name="description_network">Network</string>
    <string name="participant_avatar">Participant avatar</string>
    <string name="participant_state">Participant state</string>
    <string name="tick">Tick</string>
    <string name="poll_image">Poll image</string>
    <string name="accepted">Review accepted</string>

    <!-- Image descriptions -->
    <string name="description_poll">Poll</string>
    <string name="description_add_poll">Add Poll</string>
    <string name="description_delete_poll">Delete Poll</string>
    <string name="description_option">Option</string>
    <string name="description_add_option">Add Option</string>
    <string name="description_delete_option">Delete Option</string>
    <string name="description_help">Help</string>
    <string name="description_qrcode">QR Code</string>

    <!-- Help dialog titles -->
    <string name="help_title_network_info">Help for network information</string>
    <string name="help_title_vote">Help for vote</string>
    <string name="help_title_wait">Help for poll state</string>
    <string name="help_title_display_results">Help for results</string>
    <string name="help_title_archive">Help for archive</string>
    <string name="help_title_network_config">Help for network configuration</string>
    
    <!-- Help dialog texts -->
    <string name="help_text_network_info">network information</string>
    <string name="help_text_vote">vote</string>
    <string name="help_text_wait">poll state</string>
    <string name="help_text_display_results">display resutls</string>
    <string name="help_text_archive">archive</string>
    <string name="help_text_network_config">network configuration</string>
    
</resources>
