<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textview_poll_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="" />

    <TextView
        android:id="@+id/textview_poll_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_poll_start_time"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="" />
    
    <LinearLayout  
        android:id="@+id/layout_graph"  
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_below="@id/textview_poll_question" > 
    </LinearLayout>  

    <LinearLayout
        android:id="@+id/layout_display_result"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_below="@id/layout_graph"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/textview_header_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/header_option"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/textview_header_votes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/header_votes"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/textview_header_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/header_percentage"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

</RelativeLayout>