<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/display_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_result_title"
                android:textSize="40sp"
                android:textStyle="" />

            <TextView
                android:id="@+id/poll_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="" />

            <TextView
                android:id="@+id/poll_start_time"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:textStyle="" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/header_option"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/header_option"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/header_votes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/header_votes"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/header_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/header_percentage"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical" >
            </ListView>

            <Button
                android:id="@+id/display_result_close_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/display_result_close" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>